--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         }
     </style>
 </head>
+<script src="//code.tidio.co/wdajr75nc9rhfuf3vyabq0iumu5eebd8.js" async></script>
 <body class="bg-gray-100 text-gray-800">
     <header class="hero-bg text-white text-center py-16">
         <h1 class="text-4xl font-bold mb-2">Mick Byrne</h1>
